# docs/swagger.json
@@ -11,6 +11,16 @@
     "basePath": "/",
     "paths": {
         "/book": {
+            "get": {
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto_book.Summary"
+                        }
+                    }
+                }
+            },
             "post": {
                 "consumes": [
                     "application/json"
@@ -58,7 +68,10 @@
         "dto_book.Full": {
             "type": "object",
             "properties": {
-                "id": {
+                "_id": {
+                    "type": "string"
+                },
+                "created_at": {
                     "type": "string"
                 },
                 "name": {
@@ -66,6 +79,20 @@
                 },
                 "page": {
                     "type": "integer"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto_book.Summary": {
+            "type": "object",
+            "properties": {
+                "books": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto_book.Full"
+                    }
                 }
             }
         }
