# dto/book/response/full.dto.go
@@ -3,7 +3,9 @@ package dto_book
 import "go.mongodb.org/mongo-driver/bson/primitive"
 
 type Full struct {
-	ID   primitive.ObjectID
-	Name string
-	Page int
+	ID         primitive.ObjectID `json:"_id"`
+	Name       string
+	Page       int
+	Created_at string
+	Updated_at string
 }
