# dto/book/response/summary.dto.go
@@ -1,0 +1,5 @@
+package dto_book
+
+type Summary struct {
+	Books []Full
+}
